--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "@nestjs/core": "^9.0.0",
     "@nestjs/mongoose": "^9.2.1",
     "@nestjs/platform-express": "^9.0.0",
+    "axios": "^1.3.4",
+    "class-validator": "^0.14.0",
     "dotenv": "^16.0.3",
     "mongoose": "^6.10.2",
     "reflect-metadata": "^0.1.13",
